apps/ping-api/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-api
  labels:
    app: ping-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-api
  template:
    metadata:
      labels:
        app: ping-api
    spec:
      containers:
        - name: ping-api
          image: ghcr.io/harrytjbreen/ping-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
