apps/ping-api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-api
  labels:
    app: ping-api
spec:
  type: ClusterIP
  selector:
    app: ping-api
  ports:
    - name: http
      port: 80
      targetPort: http
