apps/ping-api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-api
  labels:
    app: ping-api
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: ping-api
                port:
                  name: http
